Improved the design of the colors table

--- a/docs/fr/Code couleur.tex
+++ b/docs/fr/Code couleur.tex
@@ -73,6 +73,7 @@
 
 \begin{document}
 \maketitle
+\newpage
 
 \color{sec1}
 \section{Couleurs de la documentation au format "normal"}\color{text}
@@ -104,37 +105,26 @@
 \end{justify}
 
 \begin{justify}
-    \begin{tabular}{|l|l|l|}
-        \hline
-        \textbf{Code couleur} & \textbf{Couleur}    & \textbf{Description}\\
-        \hline
-        \color{text}back  & \color{text}Noir        & \color{text}Couleur de fond du document\\
-        \hline
-        \color{case}case  & \color{case}Jaune       & \color{case}Couleur des conditions \textbf{"case"}\\
-        \hline
-        \color{cmds}cmds  & \color{cmds}Gris        & \color{cmds}Couleur des noms de commandes du système et de leurs arguments\\
-        \hline
-        \color{cond}cond  & \color{cond}Brique      & \color{cond}Couleur des conditions \textbf{"if"}\\
-        \hline
-        \color{func}func  & \color{func}Mauve       & \color{func}Couleur des fonctions définies dans chaque module du framework\\
-        \hline
-        \color{loop}loop  & \color{loop}Cyan        & \color{loop}Couleur des boucles\\
-        \hline
-        \color{main}main  & \color{main}Violet      & \color{main}Couleur des fonctions du script principal\\
-        \hline
-        \color{path}path  & \color{path}Citron vert & \color{path}Couleur des chemins de dossiers et de fichiers\\
-        \hline
-        \color{sec1}sec1  & \color{sec1}Rouge       & \color{sec1}Couleur des titres principaux et de premier niveau\\
-        \hline
-        \color{sec2}sec2  & \color{sec2}Vert        & \color{sec2}Couleur des titres de deuxième niveau\\
-        \hline
-        \color{sec3}sec3  & \color{sec3}Bleu        & \color{sec3}Couleur des titres de troisième niveau\\
-        \hline
-        \color{text}text  & \color{text}Blanc       & \color{text}Couleur du texte normal\\
-        \hline
-        \color{vars}vars  & \color{vars}Orange      & \color{vars}Couleur des noms des paramètres et des variables\\
-        \hline
+    \begin{tabular}{lll}
+        \textbf{Code couleur} & \textbf{Couleur}    & \textbf{Description}\\\\
 
+        \color{text}back  & \color{text}Noir        & \color{text}Couleur de fond du document\\
+        \color{case}case  & \color{case}Jaune       & \color{case}Couleur des conditions \textbf{"case"}\\
+        \color{cmds}cmds  & \color{cmds}Gris        & \color{cmds}Couleur des noms de commandes du système et de leurs arguments\\\\
+
+        \color{cond}cond  & \color{cond}Brique      & \color{cond}Couleur des conditions \textbf{"if"}\\
+        \color{func}func  & \color{func}Mauve       & \color{func}Couleur des fonctions définies dans chaque module du framework\\
+        \color{loop}loop  & \color{loop}Cyan        & \color{loop}Couleur des boucles\\\\
+
+        \color{main}main  & \color{main}Violet      & \color{main}Couleur des fonctions du script principal\\
+        \color{path}path  & \color{path}Citron vert & \color{path}Couleur des chemins de dossiers et de fichiers\\
+        \color{sec1}sec1  & \color{sec1}Rouge       & \color{sec1}Couleur des titres principaux et de premier niveau\\\\
+
+        \color{sec2}sec2  & \color{sec2}Vert        & \color{sec2}Couleur des titres de deuxième niveau\\
+        \color{sec3}sec3  & \color{sec3}Bleu        & \color{sec3}Couleur des titres de troisième niveau\\
+        \color{text}text  & \color{text}Blanc       & \color{text}Couleur du texte normal\\\\
+
+        \color{vars}vars  & \color{vars}Orange      & \color{vars}Couleur des noms des paramètres et des variables\\
     \end{tabular}
 \end{justify}
 
@@ -154,37 +144,26 @@
 \section{Couleurs de la documentation au format imprimable}\color{text}
 
 \begin{justify}
-    \begin{tabular}{|l|l|l|}
-        \hline
-        \textbf{Code couleur} & \textbf{Couleur}    & \textbf{Description}\\
-        \hline
-        \color{text}back  & \color{text}Blanc       & \color{text}Couleur de fond du document\\
-        \hline
-        \color{case}case  & \color{case}Jaune       & \color{case}Couleur des conditions \textbf{"case"}\\
-        \hline
-        \color{cmds}cmds  & \color{cmds}Gris        & \color{cmds}Couleur des noms de commandes du système et de leurs arguments\\
-        \hline
-        \color{cond}cond  & \color{cond}Brique      & \color{cond}Couleur des conditions \textbf{"if"}\\
-        \hline
-        \color{func}func  & \color{func}Mauve       & \color{func}Couleur des fonctions définies dans chaque module du framework\\
-        \hline
-        \color{loop}loop  & \color{loop}Cyan        & \color{loop}Couleur des boucles\\
-        \hline
-        \color{main}main  & \color{main}Violet      & \color{main}Couleur des fonctions du script principal\\
-        \hline
-        \color{path}path  & \color{path}Citron vert & \color{path}Couleur des chemins de dossiers et de fichiers\\
-        \hline
-        \color{sec1}sec1  & \color{sec1}Rouge       & \color{sec1}Couleur des titres principaux et de premier niveau\\
-        \hline
-        \color{sec2}sec2  & \color{sec2}Vert        & \color{sec2}Couleur des titres de deuxième niveau\\
-        \hline
-        \color{sec3}sec3  & \color{sec3}Bleu        & \color{sec3}Couleur des titres de troisième niveau\\
-        \hline
-        \color{text}text  & \color{text}Noir        & \color{text}Couleur du texte normal\\
-        \hline
-        \color{vars}vars  & \color{vars}Orange      & \color{vars}Couleur des noms des paramètres et des variables\\
-        \hline
+    \begin{tabular}{lll}
+        \textbf{Code couleur} & \textbf{Couleur}    & \textbf{Description}\\\\
 
+        \color{text}back  & \color{text}Blanc       & \color{text}Couleur de fond du document\\
+        \color{case}case  & \color{case}Jaune       & \color{case}Couleur des conditions \textbf{"case"}\\
+        \color{cmds}cmds  & \color{cmds}Gris        & \color{cmds}Couleur des noms de commandes du système et de leurs arguments\\\\
+
+        \color{cond}cond  & \color{cond}Brique      & \color{cond}Couleur des conditions \textbf{"if"}\\
+        \color{func}func  & \color{func}Mauve       & \color{func}Couleur des fonctions définies dans chaque module du framework\\
+        \color{loop}loop  & \color{loop}Cyan        & \color{loop}Couleur des boucles\\\\
+
+        \color{main}main  & \color{main}Violet      & \color{main}Couleur des fonctions du script principal\\
+        \color{path}path  & \color{path}Citron vert & \color{path}Couleur des chemins de dossiers et de fichiers\\
+        \color{sec1}sec1  & \color{sec1}Rouge       & \color{sec1}Couleur des titres principaux et de premier niveau\\\\
+
+        \color{sec2}sec2  & \color{sec2}Vert        & \color{sec2}Couleur des titres de deuxième niveau\\
+        \color{sec3}sec3  & \color{sec3}Bleu        & \color{sec3}Couleur des titres de troisième niveau\\
+        \color{text}text  & \color{text}Noir        & \color{text}Couleur du texte normal\\\\
+
+        \color{vars}vars  & \color{vars}Orange      & \color{vars}Couleur des noms des paramètres et des variables\\
     \end{tabular}
 \end{justify}
 
