--- a/docs/en/Color code.tex
+++ b/docs/en/Color code.tex
@@ -71,6 +71,7 @@
 
 \begin{document}
 \maketitle
+\newpage
 
 \color{sec1}
 \section{Colors of the documentation into "normal" format}\color{text}
@@ -102,37 +103,26 @@
 \end{justify}
 
 \begin{justify}
-    \begin{tabular}{|l|l|l|}
-        \hline
-        \textbf{Color code} & \textbf{color}        & \textbf{Description}\\
-        \hline
-        \color{text}back    & \color{text}Black     & \color{text}Color of the document background\\
-        \hline
-        \color{case}case    & \color{case}Yellow    & \color{case}Color of the \textbf{"case"} conditions\\
-        \hline
-        \color{cmds}cmds    & \color{cmds}Gray      & \color{cmds}Color of the names of the system commands with their arguments\\
-        \hline
-        \color{cond}cond    & \color{cond}Brick     & \color{cond}Color of the \textbf{"if"} conditions\\
-        \hline
-        \color{func}func    & \color{func}Mauve     & \color{func}Color of the functions defined in each module of the Bash Utils framework\\
-        \hline
-        \color{loop}loop    & \color{loop}Cyan      & \color{loop}Color of the loops\\
-        \hline
-        \color{main}main    & \color{main}Violet    & \color{main}Color of the functions from the main script\\
-        \hline
-        \color{path}path    & \color{path}Lime      & \color{path}Color of the files and folders paths\\
-        \hline
-        \color{sec1}sec1    & \color{sec1}Red       & \color{sec1}Color of the main and first level titles\\
-        \hline
-        \color{sec2}sec2    & \color{sec2}Green     & \color{sec2}Color of the second level titles\\
-        \hline
-        \color{sec3}sec3    & \color{sec3}Blue      & \color{sec3}Color of the third level titles\\
-        \hline
-        \color{text}text    & \color{text}White     & \color{text}Color of the normal text\\
-        \hline
-        \color{vars}vars    & \color{vars}Orange    & \color{vars}Color of the names of the parameters and the variables\\
-        \hline
+    \begin{tabular}{lll}
+        \textbf{Color code} & \textbf{color}        & \textbf{Description}\\\\
 
+        \color{text}back    & \color{text}Black     & \color{text}Color of the document background\\
+        \color{case}case    & \color{case}Yellow    & \color{case}Color of the \textbf{"case"} conditions\\
+        \color{cmds}cmds    & \color{cmds}Gray      & \color{cmds}Color of the names of the system commands with their arguments\\\\
+
+        \color{cond}cond    & \color{cond}Brick     & \color{cond}Color of the \textbf{"if"} conditions\\
+        \color{func}func    & \color{func}Mauve     & \color{func}Color of the functions defined in each module of the Bash Utils framework\\
+        \color{loop}loop    & \color{loop}Cyan      & \color{loop}Color of the loops\\\\
+
+        \color{main}main    & \color{main}Violet    & \color{main}Color of the functions from the main script\\
+        \color{path}path    & \color{path}Lime      & \color{path}Color of the files and folders paths\\
+        \color{sec1}sec1    & \color{sec1}Red       & \color{sec1}Color of the main and first level titles\\\\
+
+        \color{sec2}sec2    & \color{sec2}Green     & \color{sec2}Color of the second level titles\\
+        \color{sec3}sec3    & \color{sec3}Blue      & \color{sec3}Color of the third level titles\\
+        \color{text}text    & \color{text}White     & \color{text}Color of the normal text\\\\
+
+        \color{vars}vars    & \color{vars}Orange    & \color{vars}Color of the names of the parameters and the variables\\
     \end{tabular}
 \end{justify}
 
@@ -152,37 +142,26 @@
 \section{Colors of the documentation into the printable format}\color{text}
 
 \begin{justify}
-    \begin{tabular}{|l|l|l|}
-        \hline
-        \textbf{Color code} & \textbf{Color}        & \textbf{Description}\\
-        \hline
-        \color{text}back    & \color{text}White     & \color{text}Color of the document background\\
-        \hline
-        \color{case}case    & \color{case}Yellow    & \color{case}Color of the \textbf{"case"} conditions\\
-        \hline
-        \color{cmds}cmds    & \color{cmds}Gray      & \color{cmds}Color of the names of the system commands with their arguments\\
-        \hline
-        \color{cond}cond    & \color{cond}Brick     & \color{cond}Color of the \textbf{"if"} conditions\\
-        \hline
-        \color{func}func    & \color{func}Mauve     & \color{func}Color of the functions defined in each module of the Bash Utils framework\\
-        \hline
-        \color{loop}loop    & \color{loop}Cyan      & \color{loop}Color of the loops\\
-        \hline
-        \color{main}main    & \color{main}Violet    & \color{main}Color of the functions from the main script\\
-        \hline
-        \color{path}path    & \color{path}Lime      & \color{path}Color of the files and folders paths\\
-        \hline
-        \color{sec1}sec1    & \color{sec1}Red       & \color{sec1}Color of the main and first level titles\\
-        \hline
-        \color{sec2}sec2    & \color{sec2}Green     & \color{sec2}Color of the second level titles\\
-        \hline
-        \color{sec3}sec3    & \color{sec3}Blue      & \color{sec3}Color of the third level titles\\
-        \hline
-        \color{text}text    & \color{text}Black     & \color{text}Color of the normal text\\
-        \hline
-        \color{vars}vars    & \color{vars}Orange    & \color{vars}Color of the names of the parameters and the variables\\
-        \hline
+    \begin{tabular}{lll}
+        \textbf{Color code} & \textbf{Color}        & \textbf{Description}\\\\
 
+        \color{text}back    & \color{text}White     & \color{text}Color of the document background\\
+        \color{case}case    & \color{case}Yellow    & \color{case}Color of the \textbf{"case"} conditions\\
+        \color{cmds}cmds    & \color{cmds}Gray      & \color{cmds}Color of the names of the system commands with their arguments\\\\
+
+        \color{cond}cond    & \color{cond}Brick     & \color{cond}Color of the \textbf{"if"} conditions\\
+        \color{func}func    & \color{func}Mauve     & \color{func}Color of the functions defined in each module of the Bash Utils framework\\
+        \color{loop}loop    & \color{loop}Cyan      & \color{loop}Color of the loops\\\\
+
+        \color{main}main    & \color{main}Violet    & \color{main}Color of the functions from the main script\\
+        \color{path}path    & \color{path}Lime      & \color{path}Color of the files and folders paths\\
+        \color{sec1}sec1    & \color{sec1}Red       & \color{sec1}Color of the main and first level titles\\\\
+
+        \color{sec2}sec2    & \color{sec2}Green     & \color{sec2}Color of the second level titles\\
+        \color{sec3}sec3    & \color{sec3}Blue      & \color{sec3}Color of the third level titles\\
+        \color{text}text    & \color{text}Black     & \color{text}Color of the normal text\\\\
+
+        \color{vars}vars    & \color{vars}Orange    & \color{vars}Color of the names of the parameters and the variables\\
     \end{tabular}
 \end{justify}
 
