Added new LaTeX files and renamed two of them which used the names of obsolete library files

--- a/docs/fr/modules/04) Functions/main/DevTools.tex
+++ b/docs/fr/modules/04) Functions/main/DevTools.tex
@@ -49,17 +49,17 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctions du fichier de librairie \color{path}Keyboard.lib}\color{text}
+\title{\color{sec1}Fonctions du fichier de librairie \color{path}DevTools.lib}\color{text}
 \author{Dimitri OBEID}
 \date{2021}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Fonctions du fichier de librairie Keyboard.lib)
+  /Title    (Fonctions du fichier de librairie DevTools.lib)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctions du fichier de librairie Keyboard.lib)
+  /Subject  (Fonctions du fichier de librairie DevTools.lib)
   /Keywords ()
 }
 
@@ -73,7 +73,6 @@
 % Début du document.
 
 \begin{document}
-
 \maketitle
 \newpage
 
@@ -81,10 +80,10 @@
 \tableofcontents
 \newpage
 
-\begin{abstract}
+\color{sec1}
+\section{Présentation}\color{text}
 
-\end{abstract}
-
-\section{}
+\color{sec2}
+\subsection{Description}\color{text}
 
 \end{document}
