--- a/docs/en/Color code.tex
+++ b/docs/en/Color code.tex
@@ -31,12 +31,12 @@
 
 \definecolor{loop}{HTML}{00ffff}        % Cyan          - Color of the loops.
 \definecolor{main}{HTML}{8F00FF}        % Violet        - Color of the functions from the main script.
-\definecolor{path}{HTML}{bfff00}        % Citron vert   - Color of the files and folders paths.
-\definecolor{sec1}{HTML}{ff0000}        % Rouge         - Color of the main and first level titles.
-\definecolor{sec2}{HTML}{00ff00}        % Vert          - Color of the second level titles.
+\definecolor{path}{HTML}{bfff00}        % Lime          - Color of the files and folders paths. and folders paths.
+\definecolor{sec1}{HTML}{ff0000}        % Red           - Color of the main and first level titles.
+\definecolor{sec2}{HTML}{00ff00}        % Green         - Color of the second level titles.
 
-\definecolor{sec3}{HTML}{0060ff}        % Bleu          - Color of the third level titles.
-\definecolor{text}{HTML}{ffffff}        % Blanc | Noir  - Color of the normal text.
+\definecolor{sec3}{HTML}{0060ff}        % Blue          - Color of the third level titles.
+\definecolor{text}{HTML}{ffffff}        % White | Black - Color of the normal text.
 \definecolor{vars}{HTML}{FF7F00}        % Orange        - Color of the names of the parameters and the variables.
 
 % ----------------------------------------------------------------
