--- a/docs/en/Color code.tex
+++ b/docs/en/Color code.tex
@@ -49,7 +49,7 @@
 % -----------------------------------------------
 % Definition of the informations of the document.
 
-\title{\color{sec1}Color code of the official Bash Utils \\framework documentation}\color{text}
+\title{\color{red}Color \color{orange}code \color{yellow}of \color{green}the \color{blue}official \color{violet}Bash \\\color{red}Utils \color{orange}framework \color{yellow}documentation}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
