--- a/docs/fr/Code couleur.tex
+++ b/docs/fr/Code couleur.tex
@@ -49,7 +49,7 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Code couleur de la documentation officielle \\du framework Bash Utils}\color{text}
+\title{\color{red}Code \color{orange}couleur \color{yellow}de \color{green}la \color{blue}documentation \\\color{violet}officielle \color{red}du \color{orange}framework \color{yellow}Bash \color{green}Utils}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
