Created the "DevTools.pdf" file into the French documentation

--- a/docs/fr/modules/04) Functions/main/DevTools.tex
+++ b/docs/fr/modules/04) Functions/main/DevTools.tex
@@ -86,4 +86,86 @@
 \color{sec2}
 \subsection{Description}\color{text}
 
+\begin{justify}
+    Ce fichier source inclut des fonctions servant directement à l'exécution des scripts DevTools du framework, comme le compilateur, le générateur de templates pour les fichiers source \LaTeX \ ou pour les scripts DevTools ou de projet.
+\end{justify}
+
+\color{sec2}
+\subsection{Définitions des éléments mentionnés}\color{text}
+
+\color{sec3}
+\subsubsection{Chemins des fichiers}\color{text}
+
+\begin{justify}
+    \begin{tabular}{|l|l|}
+     ×
+    \end{tabular}
+
+    \begin{tabular}{|l|l|}
+     ×
+    \end{tabular}
+
+    \begin{tabular}{|l|l|}
+     ×
+    \end{tabular}
+\end{justify}
+
+% ------------
+
+% ----------------------
+
+\color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
+
+\color{sec3}
+\subsubsection{Fonctions externes appelées}\color{text}
+
+\begin{justify}
+    \begin{tabular}{|l|l|}
+     ×
+    \end{tabular}
+\end{justify}
+
+% ------------
+
+% ----------------------
+
+\color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
+
+\color{sec3}
+\subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{text}
+
+\begin{justify}
+    \begin{tabular}{|l|l|}
+     ×
+    \end{tabular}
+\end{justify}
+
+% ------------
+
+\textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_}\\[1\baselineskip]
+
+\setlength{\parskip}{2em}
+
+\begin{justify}
+    \textbf{Description :}
+\end{justify}
+
+\setlength{\parskip}{1em}
+
+\begin{justify}
+    Cette variable globale
+\end{justify}
+
+\textbf{Fichier de définition : \color{path}}\\[1\baselineskip]
+
+% ------------
+
+% ----------------------
+
+% -----------------------------------------------
+
+% /////////////////////////////////////////////////////////////////////////////////////////////// %
+
+\color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
 \end{document}
