--- a/docs/fr/modules/02) Config/main/Status-conf.tex
+++ b/docs/fr/modules/02) Config/main/Status-conf.tex
@@ -56,11 +56,11 @@
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Variables et fonctions du fichier de configuration du module principal "Status.conf")
+  /Title    (Fonctions et variables du fichier de configuration du module principal "Status.conf")
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Variables et fonctions du fichier de configuration du module principal "Status.conf")
+  /Subject  (Fonctions et variables du fichier de configuration du module principal "Status.conf")
   /Keywords ()
 }
 
