--- a/docs/fr/modules/02) Config/main/Locale-conf.tex
+++ b/docs/fr/modules/02) Config/main/Locale-conf.tex
@@ -50,17 +50,17 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Variables et fonctions du fichier \\de configuration du module \\principal \color{path}Locale.conf}\color{text}
+\title{\color{sec1}Fonctions et variables du fichier \\de configuration du module \\principal \color{path}Locale.conf}\color{text}
 \author{Dimitri OBEID}
 \date{2022}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Variables et fonctions du fichier de configuration du module principal "Locale.conf")
+  /Title    (Fonctions et variables du fichier de configuration du module principal "Locale.conf")
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Variables et fonctions du fichier de configuration du module principal "Locale.conf")
+  /Subject  (Fonctions et variables du fichier de configuration du module principal "Locale.conf")
   /Keywords ()
 }
 
