--- a/docs/fr/modules/03) InitModule/main/Initializer.tex
+++ b/docs/fr/modules/03) InitModule/main/Initializer.tex
@@ -39,7 +39,6 @@
 \definecolor{text}{HTML}{ffffff}        % Blanc | Noir  - Couleur du texte normal.
 \definecolor{vars}{HTML}{FF7F00}        % Orange        - Couleur des noms des paramètres et des variables.
 
-
 % ------------------------------------------------------------------------
 % Définition de la police d'écriture et de la couleur de fond du document.
 
@@ -50,17 +49,17 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctions et variables du fichier \\de configuration du module \\principal \color{path}Locale.conf}\color{text}
+\title{\color{sec1}Fonctions et variables du script \\d'initialisation du module principal}\color{text}
 \author{Dimitri OBEID}
 \date{2023}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Fonctions et variables du fichier de configuration du module principal "Locale.conf")
+  /Title    (Fonctions et variables du script d'initialisation du module principal)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctions et variables du fichier de configuration du module principal "Locale.conf")
+  /Subject  (Fonctions et variables du script d'initialisation du module principal)
   /Keywords ()
 }
 
