--- a/docs/en/modules/02) Config/main/Project-conf.tex
+++ b/docs/en/modules/02) Config/main/Project-conf.tex
@@ -1,58 +1,57 @@
 \documentclass[a4paper,10pt]{article}
 
-\usepackage[utf8]{inputenc}     % Encodage du texte (caractères accentués).
-\usepackage[french]{babel}      % Langue du document.
-\usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
-\usepackage[T1]{fontenc}		% Règle de césure pour les caractères accentués (pour le compilateur LaTeX).
+\usepackage[utf8]{inputenc}     % Text encoding (accented characters).
+\usepackage[english]{babel}     % Document language.
+\usepackage[sfdefault]{roboto}  % Font used in the document.
+\usepackage[T1]{fontenc}		% Hyphenation rule for accented characters (for the LaTeX compiler).
 
-\usepackage{fancyhdr}           % Ajout de headers et footers à chaque page du document.
-\usepackage{hyperref}           % Création de liens cliquables pointant vers d'autres parties du document.
-\usepackage{parskip}            % Sauts de ligne déterminables entre chaque paragraphe.
+\usepackage{fancyhdr}           % Adding headers and footers to each page of the document.
+\usepackage{hyperref}           % Creation of clickable links pointing to other parts of the document.
+\usepackage{parskip}            % Definable line breaks between each paragraph.
 
-% Ne pas oublier de modifier l'option "svgnames" (couleurs définies sur le modèle RGB, meilleur pour l'affichage numérique)
-% en option "dvipsnames" (basé sur le modèle de couleur CJMB (CMYK), meilleur pour l'impression) via le script de conversion
-% en format imprimable.
-\usepackage[usenames,svgnames]{xcolor}      % Coloration du texte.
-\usepackage{verbatim}						% Mise en page des paragraphes.
+% Don't forget to change the "svgnames" option (colors defined on the RGB model, better for digital display)
+% into "dvipsnames" option (based on the CMYK model, better for printing) in the script which converts each
+% LaTeX document to printable format.
+\usepackage[usenames,svgnames]{xcolor}      % Text colouring.
+\usepackage{verbatim}						% Paragraph layout.
 
-\usepackage[document]{ragged2e}								% Justification du texte.
-\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Mise en page du document.
+\usepackage[document]{ragged2e}								% Text justification.
+\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Document layout.
 
-% ------------------------------------------------------------------------------------------------------------------------
-% Liste des couleurs définies (pour la mise en page et pour le changement de thème pour l'impression de la documentation).
+% --------------------------------------------------------------------------------------------------
+% List of defined colors (for the layout and for changing the theme for printing the documentation).
 
-% Définition de la couleur              % Normal | Imprimable   - Description
+% Color definition                      % Normal | Printable    - Description
 
-\definecolor{back}{HTML}{000000}        % Noir | Blanc  - Couleur de fond du document.
-\definecolor{case}{HTML}{fcff00}        % Jaune         - Couleur des conditions "case".
-\definecolor{cmds}{HTML}{909090}        % Gris          - Couleur des noms de commandes du système et de leurs arguments.
-\definecolor{cond}{HTML}{be480a}        % Brique        - Couleur des conditions "if".
-\definecolor{func}{HTML}{800080}        % Mauve         - Couleur des fonctions définies dans chaque module du framework Bash Utils.
+\definecolor{back}{HTML}{000000}        % Black | White - Color of the document background.
+\definecolor{case}{HTML}{fcff00}        % Yellow        - Color of the "case" conditions.
+\definecolor{cmds}{HTML}{909090}        % Gray          - Color of the names of the system commands with their arguments.
+\definecolor{cond}{HTML}{be480a}        % Brick         - Color of the "if" conditions.
+\definecolor{func}{HTML}{800080}        % Mauve         - Color of the functions defined in each module of the Bash Utils framework.
 
-\definecolor{loop}{HTML}{00ffff}        % Cyan          - Couleur des boucles.
-\definecolor{main}{HTML}{8F00FF}        % Violet        - Couleur des fonctions du script principal.
-\definecolor{path}{HTML}{bfff00}        % Citron vert   - Couleur des chemins de dossiers et de fichiers.
-\definecolor{sec1}{HTML}{ff0000}        % Rouge         - Couleur des titres principaux et de premier niveau.
-\definecolor{sec2}{HTML}{00ff00}        % Vert          - Couleur des titres de deuxième niveau.
+\definecolor{loop}{HTML}{00ffff}        % Cyan          - Color of the loops.
+\definecolor{main}{HTML}{8F00FF}        % Violet        - Color of the functions from the main script.
+\definecolor{path}{HTML}{bfff00}        % Lime          - Color of the files and folders paths. and folders paths.
+\definecolor{sec1}{HTML}{ff0000}        % Red           - Color of the main and first level titles.
+\definecolor{sec2}{HTML}{00ff00}        % Green         - Color of the second level titles.
 
-\definecolor{sec3}{HTML}{0060ff}        % Bleu          - Couleur des titres de troisième niveau.
-\definecolor{text}{HTML}{ffffff}        % Blanc | Noir  - Couleur du texte normal.
-\definecolor{vars}{HTML}{FF7F00}        % Orange        - Couleur des noms des paramètres et des variables.
+\definecolor{sec3}{HTML}{0060ff}        % Blue          - Color of the third level titles.
+\definecolor{text}{HTML}{ffffff}        % White | Black - Color of the normal text.
+\definecolor{vars}{HTML}{FF7F00}        % Orange        - Color of the names of the parameters and the variables.
 
-
-% ------------------------------------------------------------------------
-% Définition de la police d'écriture et de la couleur de fond du document.
+% ----------------------------------------------------------------
+% Definition of the font and the background color of the document.
 
 \fontfamily{Roboto}
 
 \pagecolor{back}
 
-% ----------------------------------------
-% Définition des informations du document.
+% -----------------------------------------------
+% Definition of the informations of the document.
 
 \title{\color{sec1}Functions and variables of the \color{path}Project.conf\color{sec1}\\configuration file from the main module}\color{text}
 \author{Dimitri OBEID}
-\date{2022}
+\date{2023}
 \pagestyle{fancy}
 
 \pdfinfo{
@@ -64,14 +63,15 @@
   /Keywords ()
 }
 
-% ------------------------------------------------------------
-% Mise en page des paragraphes et des en-têtes de chaque page.
+% -----------------
+% Paragraph layout.
+
 \setlength{\parskip}{1em}
 
 \setlength{\headheight}{13pt}
 
-% ------------------
-% Début du document.
+% --------------------------
+% Beginning of the document.
 
 \begin{document}
 \maketitle
