--- a/docs/en/modules/02) Config/main/Aliases-conf.tex
+++ b/docs/en/modules/02) Config/main/Aliases-conf.tex
@@ -82,7 +82,7 @@
 \newpage
 
 \color{sec1}
-\section{Présentation}\color{text}
+\section{Presentation}\color{text}
 
 \color{sec2}
 \subsection{Description}\color{text}
