--- a/docs/en/modules/03) InitModule/main/Initializer.tex
+++ b/docs/en/modules/03) InitModule/main/Initializer.tex
@@ -49,19 +49,20 @@
 % -----------------------------------------------
 % Definition of the informations of the document.
 
-\title{\color{sec1}Functions and variables of the \color{path}Locale.conf\color{sec1}\\configuration file from the main module}\color{text}
+\title{\color{sec1}Functions and variables of the \\main module's initializer script}\color{text}
 \author{Dimitri OBEID}
 \date{2023}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Functions and variables of the "Locale.conf" configuration file from the main module)
+  /Title    (Functions and variables of the main module's initializer script)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Functions and variables of the "Locale.conf" configuration file from the main module)
+  /Subject  (Functions and variables of the main module's initializer script)
   /Keywords ()
 }
+
 
 % -----------------
 % Paragraph layout.
@@ -70,8 +71,8 @@
 
 \setlength{\headheight}{13pt}
 
-% --------------------------
-% Beginning of the document.
+% ------------------
+% Début du document.
 
 \begin{document}
 \maketitle
