--- a/docs/en/modules/02) Config/main/ColorsBG-conf.tex
+++ b/docs/en/modules/02) Config/main/ColorsBG-conf.tex
@@ -83,7 +83,7 @@
 \newpage
 
 \color{sec1}
-\section{Présentation}\color{text}
+\section{Presentation}\color{text}
 
 \color{sec2}
 \subsection{Description}\color{text}
