--- a/docs/fr/modules/01) InitScript/Fonctions.tex
+++ b/docs/fr/modules/01) InitScript/Fonctions.tex
@@ -50,17 +50,17 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctions du fichier de librairie \color{path}Checkings.lib}\color{text}
+\title{\color{sec1}Fonctions et variables du script d'initialisation des modules du framework Bash Utils}\color{text}
 \author{Dimitri OBEID}
 \date{2022}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Fonctions du fichier de librairie Checkings.lib)
+  /Title    (Fonctions et variables du script d'initialisation des modules du framework Bash Utils)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctions du fichier de librairie Checkings.lib)
+  /Subject  (Fonctions et variables du script d'initialisation des modules du framework Bash Utils)
   /Keywords ()
 }
 
