Adding new LaTeX files in the English documentation

--- a/docs/en/modules/03) InitModule/Hardware/Initializer.tex
+++ b/docs/en/modules/03) InitModule/Hardware/Initializer.tex
@@ -49,20 +49,19 @@
 % -----------------------------------------------
 % Definition of the informations of the document.
 
-\title{\color{sec1}Functions and variables of the \\main module's initializer script}\color{text}
+\title{\color{sec1}Functions and variables of the initialization \\script of the \color{sec2}Hardware\color{sec1}\ module}\color{text}
 \author{Dimitri OBEID}
 \date{2023}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Functions and variables of the main module's initializer script)
+  /Title    (Functions and variables of the initialization script of the "Hardware" module)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Functions and variables of the main module's initializer script)
+  /Subject  (Functions and variables of the initialization script of the "Hardware" module)
   /Keywords ()
 }
-
 
 % -----------------
 % Paragraph layout.
