--- a/docs/en/modules/01) InitScript/Error codes.tex
+++ b/docs/en/modules/01) InitScript/Error codes.tex
@@ -52,17 +52,17 @@
 % -----------------------------------------------
 % Definition of the informations of the document.
 
-\title{\color{sec1}Functions and variables of the initialization script \\of the modules of the Bash Utils framework}\color{text}
+\title{\color{sec1}Errors codes of the initialization script of \\the modules of the Bash Utils framework}\color{text}
 \author{Dimitri OBEID}
 \date{2022}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Functions and variables of the initialization script of the modules of the Bash Utils framework)
+  /Title    (Errors codes of the initialization script of the modules of the Bash Utils framework)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Functions and variables of the initialization script of the modules of the Bash Utils framework)
+  /Subject  (Errors codes of the initialization script of the modules of the Bash Utils framework)
   /Keywords ()
 }
 
