--- a/docs/fr/modules/01) InitScript/Fonctions.tex
+++ b/docs/fr/modules/01) InitScript/Fonctions.tex
@@ -52,7 +52,7 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctions et variables du script d'initialisation des modules du framework Bash Utils}\color{text}
+\title{\color{sec1}Fonctions et variables du script d'initialisation \\des modules du framework Bash Utils}\color{text}
 \author{Dimitri OBEID}
 \date{2022}
 \pagestyle{fancy}
