--- a/docs/fr/modules/03) InitModule/main/Initializer.tex
+++ b/docs/fr/modules/03) InitModule/main/Initializer.tex
@@ -92,4 +92,63 @@
 \color{sec2}
 \subsection{Description}\color{text}
 
+\begin{justify}
+    Ce fichier sert de script d'initialisation pour le module principal en incluant chaque fichier de libraririe et de configuration dont les chemin ont été configurés dans le fichier \textbf{\color{lime}module.conf} appartenant au même module.
+\end{justify}
+
+% ------------
+
+% ----------------------
+
+% -----------------------------------------------
+
+\color{sec2}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+\color{sec2}
+\subsection{Définitions des éléments mentionnés}\color{text}
+
+\color{sec3}
+\subsubsection{Chemins des fichiers}\color{text}
+
+\begin{justify}
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{Dossier parent} - \textit{gestionnaire de modules} & \textbf{Nom du fichier}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MODULE\_INSTALL\color{path}/}                           & \textbf{\color{path}Bash-utils-init.sh}\\
+        \hline
+    \end{tabular}
+
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{Dossier parent} - \textit{dossier des configurations} & \textbf{Nom du fichier}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{path}/config/modules/main}    & \textbf{\color{path}Colors.conf}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{path}/config/modules/main}    & \textbf{\color{path}Status.conf}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{path}/config/modules/main}    & \textbf{\color{path}Text.conf}\\
+        \hline
+    \end{tabular}
+
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{Dossier parent} - \textit{dossier de la librairie} & \textbf{Nom du fichier}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main}   & \textbf{\color{path}Checkings.lib}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main}   & \textbf{\color{path}Decho.lib}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main}   & \textbf{\color{path}Errors.lib}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main}   & \textbf{\color{path}Headers.lib}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main}   & \textbf{\color{path}Status.lib}\\
+        \hline
+    \end{tabular}
+\end{justify}
+
+\setlength{\parskip}{2em}
+
+
 \end{document}
