--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -1,4 +1,4 @@
-V 0.0.0.1 - VARIABLES,COMMENTS,en,fr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+V 0.0.0.1 - VARIABLES,COMMENTS,en,fr,hu,id,it,ja,lt,lv,nb,nl,pl,ro,ru,sk,sl,sv,tr,uk,zh,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_ARGS_LIB__MSG__PRINT_BAD_OPTION__Z,This variable stores the returned message if an argument value is empty,THE %s FUNCTION %s PARAMETER HAS NO VALUE,FONCTION %s : LE PARAMÈTRE %s N'A AUCUNE VALEUR,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_ARGS_LIB__MSG__PRINT_BAD_OPTION__ALPHACHAR,This variable stores the returned message if the argument's value is not an alphabetic character,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT AN ALPHABETIC CHARACTER,FONCTION %s : LE PARAMÈTRE %s N'EST PAS UN CARACTÈRE ALPHABÉTIQUE,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_ARGS_LIB__MSG__PRINT_BAD_OPTION__ALPHASTR,This variable stores the returned message if the argument's value is not an alphabetic string,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT AN ALPHABETIC STRING,FONCTION %s : LE PARAMÈTRE %s N'EST PAS UNE CHAÎNE DE CARACTÈRES ALPHABÉTIQUE,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
@@ -24,7 +24,7 @@ __BU_MAIN_ARGS_LIB__MSG__GET_FUNC_ARGS_ARRAY_VALUES__VALUE,This variable stores 
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_ARGS_LIB__MSG__GET_FILE_NAME__MISSING_VAL_STR,This variable stores the message indicating that the path of the file to be obtained was not found,« no file identified »,« aucun fichier identifié »,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-__BU_MAIN_ARGS_LIB__MSG__GET_FUNCTION_NAME__MISSING_VAL_STR,This variable stores the message indicating that the function to be obtained was not found,« no functiion identified »,,« aucune fonction identifiée »,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+__BU_MAIN_ARGS_LIB__MSG__GET_FUNCTION_NAME__MISSING_VAL_STR,This variable stores the message indicating that the function to be obtained was not found,« no functiion identified »,« aucune fonction identifiée »,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_ARGS_LIB__MSG__GET_LINE_NUMBER__MISSING_VAL_STR,This variable stores the message indicating that the line number to be obtained was not found,« no line identified »,« aucune ligne identifiée »,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
@@ -451,11 +451,11 @@ __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__THAI,This variable stor
 __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TIBETAN,This variable stores the message that informs the framework that the language currently used is Tibetan,Tibetan,Tibétain,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TIGRINYA,This variable stores the message that informs the framework that the language currently used is Tigrinya,Tigrinya,Tigrigna,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TONGA,This variable stores the message that informs the framework that the language currently used is Tonga,Tonga,Tongien,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TSONGA,This variable stores the message that informs the framework that the language currently used is Tsonga, Tsonga,Tsonga,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TSONGA,This variable stores the message that informs the framework that the language currently used is Tsonga,Tsonga,Tsonga,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TSWANA,This variable stores the message that informs the framework that the language currently used is Tswana,Tswana,Tswana,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TURKMEN,This variable stores the message that informs the framework that the language currently used is Turkmen,Turkmen,Turkmène,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__UIGHUR,This variable stores the message that informs the framework that the language currently used is Uighur,Uighur,Ouighour,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__UKRAINIAN,This variable stores the message that informs the framework that the language currently used is Ukrainian,Ukrainian,Ukrainien,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__UKRAINIAN,This variable stores the message that informs the framework that the language currently used is Ukrainian,Ukrainian,Ukrainien,,,,,,,,,,,,,,,,Українська,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__URDU,This variable stores the message that informs the framework that the language currently used is Urdu,Urdu,Ourdou,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__UZBEK,This variable stores the message that informs the framework that the language currently used is Uzbek,Uzbek,Ouzbek,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__VENDA,This variable stores the message that informs the framework that the language currently used is Venda,Venda,Venda,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
